--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -18,6 +19,8 @@
                     <li>Product</li>
                     <li>Sing Up</li>
                     <li>Login</li>
+                    <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                    <li><i class="fa-solid fa-cart-arrow-down"></i></li>
                 </ul>
             </div>
         </nav>
@@ -29,6 +32,7 @@
                 <p class="text-area-pera">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.
                 </p>
+                <button class="btn">Prebook Now <i class="fa-solid fa-arrow-right"></i></button>
 
             </div>
             <div class="banner-image-area">
