--- a/index.html
+++ b/index.html
@@ -41,5 +41,161 @@
 
         </div>
     </header>
+    <main>
+        <section class="sponsor-section">
+            <img src="images/logos/Alibaba.svg" alt="">
+            <img src="images/logos/Amazon.svg" alt="">
+            <img src="images/logos/Daraz.pk Logo.svg" alt="">
+            <img src="images/logos/Ebay.svg" alt="">
+            <img src="images/logos/Rakuten.svg" alt="">
+            <img src="images/logos/Target.svg" alt="">
+            <img src="images/logos/Walmart.svg" alt="">
+        </section>
+        <section class="popular-item">
+            <h4 class="popular-item-title">Popular Collection</h4>
+            <div class="cards-container">
+                <div class="card">
+                    <img src="images/tripod.png" alt="">
+                    <h5 class="card-item-title">Flex Tripod</h5>
+                    <p class="card-price-title">$50.48</p>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star-half-stroke" style="color: #ec8209;"></i> <span> 4.99</span>
+                    <p class="card-pera">Wordwide shifting available
+                        Buyers protection possible!</p>
+
+
+
+                </div>
+                <div class="card">
+                    <img src="images/mic.png" alt="">
+                    <h5 class="card-item-title">Flex Tripod</h5>
+                    <p class="card-price-title">$50.48</p>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star-half-stroke" style="color: #ec8209;"></i> <span> 4.99</span>
+                    <p class="card-pera">Wordwide shifting available
+                        Buyers protection possible!</p>
+
+
+
+                </div>
+                <div class="card">
+                    <img src="images/airpod.png" alt="">
+                    <h5 class="card-item-title">Flex Tripod</h5>
+                    <p class="card-price-title">$50.48</p>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star-half-stroke" style="color: #ec8209;"></i> <span> 4.99</span>
+                    <p class="card-pera">Wordwide shifting available
+                        Buyers protection possible!</p>
+
+
+
+                </div>
+                <div class="card">
+                    <img src="images/drone.png" alt="">
+                    <h5 class="card-item-title">Drone</h5>
+                    <p class="card-price-title">$50.48</p>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star-half-stroke" style="color: #ec8209;"></i> <span> 4.99</span>
+                    <p class="card-pera">Wordwide shifting available
+                        Buyers protection possible!</p>
+
+
+
+                </div>
+                <div class="card">
+                    <img src="images/lights.png" alt="">
+                    <h5 class="card-item-title">Light Setup</h5>
+                    <p class="card-price-title">$50.48</p>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star-half-stroke" style="color: #ec8209;"></i> <span> 4.99</span>
+                    <p class="card-pera">Wordwide shifting available
+                        Buyers protection possible!</p>
+
+
+
+                </div>
+                <div class="card">
+                    <img src="images/setup.png" alt="">
+                    <h5 class="card-item-title">Photoshoot set</h5>
+                    <p class="card-price-title">$50.48</p>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star-half-stroke" style="color: #ec8209;"></i> <span> 4.99</span>
+                    <p class="card-pera">Wordwide shifting available
+                        Buyers protection possible!</p>
+
+
+
+                </div>
+                <div class="card">
+                    <img src="images/camera.png" alt="">
+                    <h5 class="card-item-title">Vlogging Camera</h5>
+                    <p class="card-price-title">$50.48</p>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star-half-stroke" style="color: #ec8209;"></i> <span> 4.99</span>
+                    <p class="card-pera">Wordwide shifting available
+                        Buyers protection possible!</p>
+
+
+
+                </div>
+                <div class="card">
+                    <img src="images/single-light.png" alt="">
+                    <h5 class="card-item-title">Green Screen</h5>
+                    <p class="card-price-title">$50.48</p>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star-half-stroke" style="color: #ec8209;"></i> <span> 4.99</span>
+                    <p class="card-pera">Wordwide shifting available
+                        Buyers protection possible!</p>
+
+
+
+                </div>
+                <div class="card">
+                    <img src="images/action.png" alt="">
+                    <h5 class="card-item-title">Action Camera</h5>
+                    <p class="card-price-title">$50.48</p>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star" style="color: #ec8209;"></i>
+                    <i class="fa-solid fa-star-half-stroke" style="color: #ec8209;"></i> <span> 4.99</span>
+                    <p class="card-pera">Wordwide shifting available
+                        Buyers protection possible!</p>
+
+
+
+                </div>
+            </div>
+            
+            <p class="see-more-tag">
+                See More <i class="fa-solid fa-arrow-right"></i>
+            </p>
+
+        </section>
+    </main>
 </body>
 </html>
