--- a/index.html
+++ b/index.html
@@ -186,15 +186,22 @@
                     <p class="card-pera">Wordwide shifting available
                         Buyers protection possible!</p>
 
-
-
                 </div>
-            </div>
-            
+            </div>  
             <p class="see-more-tag">
                 See More <i class="fa-solid fa-arrow-right"></i>
             </p>
+        </section>
+        <section class="features-container">
+            <div class="feature-image">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="feature-text">
+                <h2 class="feature-text-title">Featured products at one place</h2>
+                <p class="feature-text-pera">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
 
+            </div>
         </section>
     </main>
 </body>
