--- a/index.html
+++ b/index.html
@@ -204,5 +204,20 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-container">
+            <h4>Influencer products</h4>
+            <p>Copyright &copy;2023 Influencer products</p>
+            <p>All rights reserved</p>
+            <div class="icon-container">
+                <i class="fa-brands fa-square-instagram" style="color: #f0f2f5; background-color:transparent;"></i>
+            <i class="fa-solid fa-globe" style="color: #f0f2f5;"></i>
+            <i class="fa-brands fa-square-twitter"></i>
+            <i class="fa-brands fa-square-youtube"></i>
+            </div>
+        </div>
+
+
+    </footer>
 </body>
 </html>
